--- a/src/main/resources/assets/flow/lang/en_us.lang
+++ b/src/main/resources/assets/flow/lang/en_us.lang
@@ -6,5 +6,5 @@ tile.altar.name=Altar
 tile.copper_ore.name=Copper Ore
 item.copper_ingot.name=Copper Ingot
 item.copper_dust.name=Copper Dust
-item.copper_tinyDust.name=Tiny pile of Copper Dust
+item.copper_tinydust.name=Tiny pile of Copper Dust
 item.copper_fragment.name=Copper Fragment
