Add gui container for Altar + add mana shard

--- a/src/main/resources/assets/flow/lang/en_us.lang
+++ b/src/main/resources/assets/flow/lang/en_us.lang
@@ -38,3 +38,4 @@ item.mithril_ingot.name=Mithril Ingot
 item.mithril_tinydust.name=Tiny pile of Mithril Dust
 item.mithril_dust.name=Mithril Dust
 tile.mithril_ore.name=Mithril Ore
+item.mana_shard.name=Mana Shard
