add magic furnace

--- a/src/main/resources/assets/flow/lang/en_us.lang
+++ b/src/main/resources/assets/flow/lang/en_us.lang
@@ -39,3 +39,5 @@ item.mithril_tinydust.name=Tiny pile of Mithril Dust
 item.mithril_dust.name=Mithril Dust
 tile.mithril_ore.name=Mithril Ore
 item.mana_shard.name=Mana Shard
+
+tile.magic_furnace.name=Magic Furnace
